--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-sqlalchemy
-pymysql
-tqdm
-requests
-bs4
+beautifulsoup4==4.10.0
+bs4==0.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+greenlet==1.1.2
+idna==3.3
+mysql-connector==2.2.9
+PyMySQL==1.0.2
+requests==2.27.1
+soupsieve==2.3.1
+SQLAlchemy==1.4.32
+tqdm==4.63.0
+urllib3==1.26.9
